<resources>
    <string name="app_name">Be[비:]</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="gender_label_male">남자</string>
    <string name="gender_label_female">여자</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>

    <string name="fragment_active_distance_unit">m</string>

    <string name="fragment_select_pre_title">지금 어떤 상태인가요?</string>
    <string name="fragment_select_pre_umb">우산을 쓰고 있어요</string>
    <string name="fragment_select_pre_rain">비를 맞고 있어요</string>
    <string name="fragment_profile_umb_count">우산이 되어준 횟수</string>
    <string name="fragment_profile_rain_count">우산을 받은 횟수</string>
    <string name="fragment_profile_my_log">내 기록</string>
    <string name="fragment_profile_alarm_setting">알림설정</string>
    <string name="fragment_profile_security">보안설정</string>
    <string name="fragment_profile_sticker">내 스티커</string>
    <string name="fragment_edit_profile_comment">남긴 한마디</string>
    <string name="fragment_edit_profile_no_comment">남긴 한마디가 없습니다.</string>

    <string name="dialog_profile_no_name">No name</string>
    <string name="dialog_profile_no_detail">-</string>
    <string name="dialog_profile_distance">0m</string>
    <string name="dialog_profile_send">SEND</string>
    <string name="dialog_profile_accept">ACCEPT</string>

    <string name="snackbar_send_pickme">요청을보냈습니다</string>

    <string name="progress_dialog_pull_profile">상대방 프로필을 가져오는중입니다</string>


</resources>
