<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/dialog_profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/profile_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:background="@drawable/background_profile_include_grey"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/constraintLayout2"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/dialog_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_profile_no_name"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="25dp" />

            <TextView
                android:id="@+id/dialog_profile_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_profile_no_detail"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="25dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/dialog_profile_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"


            android:text="@string/dialog_profile_distance"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/dialog_profile_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:srcCompat="@drawable/select_btn_umb_on" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profile_accept"
            android:textColor="@color/custom_slate_grey"
            android:textSize="14sp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>