<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1.0"
    android:background="@color/custom_pinkish_grey"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/imGiverTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/fragment_select_pre_umb"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/imGiverBtn"
        app:layout_constraintLeft_toLeftOf="@+id/imGiverBtn"
        app:layout_constraintRight_toRightOf="@+id/imGiverBtn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/fragment_select_pre_title"
        android:textColor="#575a5f"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imTakerTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.507" />

    <TextView
        android:id="@+id/imTakerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/fragment_select_pre_rain"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/imTakerBtn"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="@+id/imTakerBtn"
        app:layout_constraintRight_toRightOf="@+id/imTakerBtn" />

    <ImageButton
        android:id="@+id/imGiverBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/select_btn_umb_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <ImageButton
        android:id="@+id/imTakerBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/select_btn_rain_off"
        app:layout_constraintBottom_toBottomOf="@+id/imGiverBtn"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/imGiverBtn"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>