<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">


    <LinearLayout

        android:id="@+id/edit_profile_image_top"

        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <com.doyoon.android.bravenewworld.util.view.blur.RoundedTopRectBlurView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:realtimeBlurRadius="30dp"
            app:realtimeOverlayColor="#00000000" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_image_top">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="112dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/fragment_edit_profile_comment"
                android:textColor="@color/custom_slate_grey"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/edit_profile_editText_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/fragment_edit_profile_no_comment"
                android:textColor="@color/custom_pinkish_grey"
                android:textSize="19dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />
        </android.support.constraint.ConstraintLayout>

        <EditText
            android:id="@+id/edit_profile_editText_name"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/edit_profile_editText_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="Age"
            android:inputType="number"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/edit_profile_editText_work"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="Work"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/edit_profile_radio_male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/gender_label_male" />

            <RadioButton
                android:id="@+id/edit_profile_radio_female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/gender_label_female" />
        </RadioGroup>

    </LinearLayout>

    <ImageButton
        android:id="@+id/edit_profile_btn_complete"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        app:srcCompat="@drawable/profile_btn_umb" />

</android.support.constraint.ConstraintLayout>